...
        android:id="@+id/logCardLayout"
        android:onClick="@{() -> viewmodel.onRequestDefocus()}"
        app:logcardmodel="@{logcardmodel}"
        app:viewModel="@{viewmodel}">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dip"
            android:background="@color/white"
            android:padding="5dip"
            card_view:cardCornerRadius="4dp"
            app:item="@{logcardmodel}">

            <RelativeLayout
                android:id="@+id/cardContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dip"
                android:paddingEnd="10dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
...
                <ImageView
                    android:id="@+id/optionsIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/restTimerButton"

                    android:contentDescription="@string/options_icon"
                    android:layout_marginLeft="20dip"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="4dip"
                    android:src="@drawable/ic_options_icon"
...
