...
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <!--    <ListView-->
        <!--        android:id="@+id/cycle_tracker_home_list"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_alignParentTop="true"-->
        <!--        android:layout_above="@id/seePicsBox"/>-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracker_workouts_list"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:workouts="@{viewmodel.workouts}" />
...
