...
            type="com.musclehack.targetedHypertrophyTraining.workoutTracker.home.TrackerHomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cycleListItemBackground"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/cycleListItemContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingEnd="9dip"
            android:paddingLeft="10dip"
            android:paddingRight="9dip"
...
